--- a/views/content-mobile.ejs
+++ b/views/content-mobile.ejs
@@ -28,7 +28,7 @@
 	<div class="content"><%- post.content %></div>
 </div>
 <div class="popular">
-	<p class="title-tag">Популярное за неделю</p>
+	<p class="title-tag">Последние новости</p>
 	<div id="slider" class="owl-carousel">	
 		<% L = posts.length; for (var i=0; i< L; i++) { %>
 		<a href="/post/<%- posts[i]._id%>">
