--- a/views/content.ejs
+++ b/views/content.ejs
@@ -71,6 +71,19 @@
 			 class="after-text-advice">{{ generateAfterTextAdvice('special') }} <span ng-click="slideAndChangeMode('normal')">Читай классическую версию.</span>
 		</div>
 
+		<div class="social-buddies gray">
+			<h3 class="tag-title">Подпишись, чтобы всегда быть в курсе</h3>
+			<div class="socials">
+				<span>
+					<a href="https://twitter.com/tvoyredaktor" class="twitter-follow-button" data-show-count="false" data-lang="en">Подписаться на Твой Космос</a>
+
+					<div class="fb-like" data-href="https://www.facebook.com/tvoykosmos" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+
+					<div id="vk_subscribe"></div>
+				</span>
+			</div>
+		</div>
+
 		<div class='linked-news' ng-if="linked">
 			<h3 class="tag-title">Новости по теме</h3>
 			<a href="/post/{{ n._id }}" ng-repeat="n in linked">
@@ -106,8 +119,8 @@
 	</article>
 	<aside class="list">
 		<div class="posts-list gray">
-			<h3 class="tag-title popular">Популярное за неделю</h3>
-			<a href="/post/{{ news._id }}" ng-repeat="news in popular">
+			<h3 class="tag-title popular">Последние новости</h3>
+			<a href="/post/{{ news._id }}" ng-repeat="news in last">
 				<div ng-if="news_type=='normal'" class="each-post">
 					<div class="image" style="background-image : url({{ news.image }})"></div>
 					<div class="title">{{news.title}}</div>
@@ -125,8 +138,8 @@
 	</aside>
 	<aside class="misc">
 		<div class="posts-list">
-			<h3 class="tag-title">Последние новости</h3>
-			<a href="/post/{{ news._id }}" ng-repeat="news in last">
+			<h3 class="tag-title">Популярное за неделю</h3>
+			<a href="/post/{{ news._id }}" ng-repeat="news in popular">
 				<div ng-if="news_type=='normal'" class="each-post">
 					<div class="title">{{news.title}}</div>
 					<div class="description">{{news.description}}</div>
@@ -139,7 +152,7 @@
 		</div>
 		<a class="twitter-timeline" href="https://twitter.com/tvoykosmosbaby" data-widget-id="500006500979331072"></a>
 
-		<div class="fb-like-box" data-href="https://www.facebook.com/tvoykosmos" data-width="272" data-height="200" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
+		<div class="fb-like-box" data-href="https://www.facebook.com/tvoyredaktor" data-width="272" data-height="200" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
 	</aside>
 	<!-- <aside class="misc">
 	</aside> -->
@@ -167,6 +180,8 @@
 	a = setInterval(function() {
 		try {
 			if (!!VK) {
+				VK.Widgets.Subscribe("vk_subscribe", { width: "70px", mode: 2}, -75281223);
+
 				VK.Widgets.Group("vk_groups", {mode: 0, width: "300", height: "200",color1: 'E5E5E5', color2: '2B587A', color3: 'FFB52E'}, 75281223);
 				clearInterval(a);
 			}
