--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -94,3 +94,58 @@ p.type-name {
 	line-height: 40px;
 	text-shadow: 0px 2px 2px rgba(0,0,0,.5);
 }
+
+/*////// mini //////*/
+
+.mini-top {
+	width: 1200px;
+	height: 50px;
+	border-top: 4px solid #FFB52E;
+	line-height: 50px;
+	background-color: white;
+	position: fixed;
+	top: -60px;
+	color: white;
+	z-index: 9999;
+	background: url(/images/header-image.jpg) no-repeat;
+	background-size: 100%;
+	box-shadow: 0 2px 3px rgba(0,0,0,.5);
+	-webkit-transition: top .5s;
+	-o-transition: top .5s;
+	transition: top .5s;
+}
+.mini-top > span ._regime {
+	float: right;
+	width: 100px;
+	text-align: left;
+}
+.mini-top > span ._regime p.type-name {
+	font-size: 25px;
+	line-height: 25px;
+}
+.mini-top > span ._regime p.regime {
+	font-size: 10px;
+	line-height: 12px;
+}
+.mini-top > span {
+	width: 100%;
+	line-height: 40px;
+	font-size: 20px;
+	font-family: 'RobCondBold';
+	padding-left: 20px;
+	display: inline-block;
+	vertical-align: middle;
+}
+.mini-top > span a {
+	color: #fff;
+	text-decoration: none;
+}
+.mini-top > span .__logo {
+	line-height: 46px;
+}
+.mini-top.showed {
+	top: 0;
+}
+.top.showed {
+	height: 200px;
+}
