--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,22 +2,34 @@
 <% stylesheet("/libs/animate.css/animate.min.css") -%>
 <% script('/javascripts/header.js') -%>
 <% script('/javascripts/misc.js') -%>
-<nav class="top" ng-controller="HeaderCtrl">
-	<span>
-		<div class="_nav">	
-			<div class="sections _logo">
-				<a href="/">ТВОЙ КОСМОС</a>
+<div ng-controller="HeaderCtrl">
+	<nav class="top">
+		<span>
+			<div class="_nav">	
+				<div class="sections _logo">
+					<a href="/">ТВОЙ КОСМОС</a>
+				</div>
+				<div class="sections">
+					<a class="space" href="/?section=space">космос</a>
+					<a class="physics" href="/?section=physics">физика</a>
+					<a class="tech" href="/?section=tech">технологии</a>
+				</div>
 			</div>
-			<div class="sections">
-				<a class="space" href="/?section=space">космос</a>
-				<a class="physics" href="/?section=physics">физика</a>
-				<a class="tech" href="/?section=tech">технологии</a>
+			<div class="_regime" ng-click="toggle_news_type()">
+				<p class="usn regime">MODE</p>
+				<p class="usn type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
+				<p class="usn type-name" ng-if="news_type=='special'">СПЕШЛ</p>
 			</div>
-		</div>
-		<div class="_regime" ng-click="toggle_news_type()">
-			<p class="usn regime">MODE</p>
-			<p class="usn type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
-			<p class="usn type-name" ng-if="news_type=='special'">СПЕШЛ</p>
-		</div>
-	</span>
-</nav>
+		</span>
+	</nav>
+	<nav class="mini-top">
+		<span>
+			<span class="__logo"><a href="/">ТВОЙ КОСМОС</a></span>
+			<div class="_regime" ng-click="toggle_news_type()">
+				<p class="usn regime">MODE</p>
+				<p class="usn type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
+				<p class="usn type-name" ng-if="news_type=='special'">СПЕШЛ</p>
+			</div>
+		</span>
+	</nav>
+</div>
