--- a/views/index-mobile.ejs
+++ b/views/index-mobile.ejs
@@ -2,15 +2,27 @@
 <% block('meta', partial('meta_index')) -%>
 
 <div class="content">
-	<% L = news.length; for (var i=0; i< L; i++) { %>
-		<div class="each-post">
-			<a href="/post/<%= news[i]._id%>">	
-				<div class="photo" style="background-image:url(<%= news[i].image %>)"></div>
-				<div class="text">
-					<span class="_title"><%= news[i].title %></span>
-				</div>
-			</a>
-		</div>
+	<% var arr = [true, true, true, false]; L = news.length; for (var i=0; i< L; i++) { %>
+	<% var small = arr[~~(Math.random() * arr.length)] %>
+		<% if (small) { %>
+			<div class="each-post">
+				<a href="/post/<%= news[i]._id%>">	
+					<div class="photo" style="background-image:url(<%= news[i].image %>)"></div>
+					<div class="text">
+						<span class="_title"><%= news[i].title %></span>
+					</div>
+				</a>
+			</div>
+		<% } else { %>
+			<div class="each-post-big">
+				<a href="/post/<%= news[i]._id%>">	
+					<div class="photo" style="background-image:url(<%= news[i].image %>)"></div>
+					<div class="text">
+						<span class="_title"><%= news[i].title %></span>
+					</div>
+				</a>
+			</div>
+		<% } %>
 	<% } %>
 </div>
 
@@ -28,11 +40,11 @@
 		background-color: #fff;
 		border: 1px solid rgba(0,0,0,.15);
 	}
-	.each-post p {
+	.each-post p, .each-post-big p {
 		padding: 0;
 		margin: 0;
 	}
-	.each-post a {
+	.each-post a, .each-post-big a {
 		color: #000;
 		text-decoration: none;
 	}
@@ -63,6 +75,35 @@
 		font-family: 'RobCondLight';
 		font-size: 14px;
 		line-height: 26px;
+	}
+	/*////*/
+	.each-post-big {
+		margin-bottom: 10px;
+		height: 280px;
+		border-radius: 4px;
+		overflow: hidden;
+		background-color: #fff;
+		border: 1px solid rgba(0,0,0,.15);
+	}
+	.each-post-big .photo {
+		height: 200px;
+		width: 300px;
+		background-size: 100%;
+		background-position: center center;
+		background-size: cover;	
+	}
+	.each-post-big .text {
+		height: 80px;
+		line-height: 80px;
+		text-align: center;
+		padding: 0 10px;
+	}
+	.each-post-big .text span._title {
+		display: inline-block;
+		font-family: 'RobCondBold';
+		font-size: 18px;
+		line-height: 20px;
+		vertical-align: middle;
 	}
 
 </style>
