--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,18 @@
 	<div class="feed">
 		<div ng-repeat="block in feed_blocks"
 			 class="block">
-			<news ng-if="element._size" 
+			<news class="anim" ng-if="element._size" 
 				  ng-repeat="element in block.feed_elements"
 	 			  ng-class="{ s11 : element._size == 1, s21 : element._size == 2 , s22 : element._size == 4}"type="news_type"  
 				  ng-model="element"></news>
 		</div>
+	</div>
+
+	<div class="after-feed">
+		<span class="news-load" ng-click="getNews(true)">
+			<span class="fa fa-refresh" ng-class="{ 'fa-spin' : loader }"></span>
+			<span ng-if="!loader">Загрузить еще новостей</span>
+			<span ng-if="loader">Загружаем новости</span>
+		</span>
 	</div>
 </div>
