--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -185,6 +185,23 @@ news.s22 .inner-container .text-container .description {
 	font-size: 17px;
 	line-height: 23px;
 }
+.after-feed {
+	text-align: center;
+	margin-top: 20px;
+}
+.after-feed .news-load {
+	height: 40px;
+	padding: 0px 10px;
+	line-height: 40px;
+	font-size: 18px;
+	font-family: 'RobCondBold';
+	min-width: 230px;
+	display: inline-block;
+	background-color: #e5e5e5;
+}
+.fa-refresh {
+	margin-right: 5px;
+}
 
 @media screen and (max-width:500px) and (orientation:portrait) {
 	div.block {
@@ -224,3 +241,35 @@ news.s22 .inner-container .text-container .description {
 	}
 
 }
+
+.anim {
+	-webkit-animation: appear 1s;
+	-moz-animation: appear 1s;
+	animation: appear 1s;
+}
+.anim .picture {
+	-webkit-animation: scale 1s;
+	-moz-animation: scale 1s;
+	animation: scale 1s;
+}
+
+@-webkit-keyframes appear {
+	from { opacity : 0; -webkit-transform:  rotate(5deg); -moz-transform:  rotate(5deg); transform:  rotate(5deg);}
+	to { opacity : 1; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); transform: rotate(0deg);}}
+@-moz-keyframes appear {
+	from { opacity : 0; -webkit-transform:  rotate(5deg); -moz-transform:  rotate(5deg); transform:  rotate(5deg);}
+	to { opacity : 1; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); transform: rotate(0deg);}}
+@keyframes appear {
+	from { opacity : 0; -webkit-transform:  rotate(5deg); -moz-transform:  rotate(5deg); transform:  rotate(5deg);}
+	to { opacity : 1; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); transform: rotate(0deg);}}
+
+
+@-webkit-keyframes scale {
+	from { opacity : 0; -webkit-transform: scale(.5); -moz-transform: scale(.5); transform: scale(.5);}
+	to { opacity : 1; -webkit-transform: scale(1); -moz-transform: scale(1); transform: scale(1);}}
+@-moz-keyframes scale {
+	from { opacity : 0; -webkit-transform: scale(.5); -moz-transform: scale(.5); transform: scale(.5);}
+	to { opacity : 1; -webkit-transform: scale(1); -moz-transform: scale(1); transform: scale(1);}}
+@keyframes scale {
+	from { opacity : 0; -webkit-transform: scale(.5); -moz-transform: scale(.5); transform: scale(.5);}
+	to { opacity : 1; -webkit-transform: scale(1); -moz-transform: scale(1); transform: scale(1);}}
