--- a/views/base.ejs
+++ b/views/base.ejs
@@ -9,9 +9,10 @@
 	<%- blocks.meta %>
 
 	<script src="/libs/angular/angular.min.js"></script>
+	<script src="/libs/angular-animate.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
-	<script>console.a=console.error=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error = console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
+	<!-- <script>console.a=console.error=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.error = console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script> -->
 	<script>
 		tk = angular.module('tvoyKosmos',['ui.tinymce', 'LocalStorageModule']);
 	</script> 
@@ -47,9 +48,11 @@
 
 </head>
 	<body ng-app="tvoyKosmos">
-		<% try { if (light) { %>
+		<% try { if (!light) { %>
 			<%- partial('modal')%>
-		<% }} catch(e) {} %>
+		<% }} catch(e) { %>
+			<%- partial('modal')%>
+		<% } %>
 		<div class="container">	
 			<%- partial('header') %>	
 			<%- body %>
