--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -14,6 +14,8 @@ footer .info {
 }
 footer .metric, footer .nav {
 	width: 25%;
+	height: 150px;
+	line-height: 150px;
 }
 footer .info > span, footer .nav > span {
 	line-height: 15px;
@@ -42,6 +44,24 @@ footer .nav > span > span a {
 	color: #fff;
 	text-decoration: none
 }
+footer .tk-rss {
+	font-size: 20px;
+	padding-right: 10px;
+	color: #FFB52A;
+	text-decoration: none;
+	height: 35px;
+	line-height: 38px;
+}
+footer .metric > span {
+	display: inline-block;
+	line-height: 35px;
+	vertical-align: middle;
+}
+footer .metric > span > * {
+	float: left;
+	padding-right: 15px;
+}
+
 /*footer span {
 	padding: 20px;
 	font-size: 30px;
