--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,9 +13,13 @@
 		</span>
 	</div>
 	<div class="metric">
-		<!-- Yandex.Metrika informer --><a href="https://metrika.yandex.ru/stat/?id=26010921&amp;from=informer" target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/26010921/3_0_FFD54EFF_FFB52EFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a><!-- /Yandex.Metrika informer -->
+		<span>
+			<a href="/rss" class="tk-rss fa fa-rss-square"></a>
 
-		<!--LiveInternet counter--><script type="text/javascript">document.write("<a href='//www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t12.6;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";h"+escape(document.title.substring(0,80)) +  ";" + Math.random() + "' border=0 width=88 height=31 alt='' title='LiveInternet: показано число просмотров за 24 часа, посетителей за 24 часа и за сегодня'><\/a>")</script><!--/LiveInternet-->
+			<!-- Yandex.Metrika informer --><a href="https://metrika.yandex.ru/stat/?id=26010921&amp;from=informer" target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/26010921/3_0_FFD54EFF_FFB52EFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a><!-- /Yandex.Metrika informer -->
+
+			<!--LiveInternet counter--><script type="text/javascript">document.write("<a href='//www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t12.6;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";h"+escape(document.title.substring(0,80)) +  ";" + Math.random() + "' border=0 width=88 height=31 alt='' title='LiveInternet: показано число просмотров за 24 часа, посетителей за 24 часа и за сегодня'><\/a>")</script><!--/LiveInternet-->
+		</span>
 	</div>
 
 	<!-- <span class="warp">
