стиль для заголовков картинок на мобиле

--- a/views/content-mobile.ejs
+++ b/views/content-mobile.ejs
@@ -64,6 +64,11 @@
 	.post .content p {
 		margin: 10px 0;
 	}
+	.post .content p.img_description {
+		font-size: 14px;
+		line-height: 18px;
+		margin-bottom: 15px;
+	}
 	.post h2, .post h3 {
 		font: 18px/22px 'RobCondBold';
 		margin-bottom: 5px;
