добавлен счетчик ромблерера

--- a/views/footer-mobile.ejs
+++ b/views/footer-mobile.ejs
@@ -6,7 +6,7 @@
 		margin-top: 10px;
 	}
 	footer .info, footer > span {
-		padding: 0 30px;
+		padding: 0 20px;
 		margin: 20px 0;
 		position: relative;
 		box-sizing: border-box;
@@ -27,8 +27,21 @@
 	</div>
 
 	<span>
-		<!-- Yandex.Metrika informer --><a href="https://metrika.yandex.ru/stat/?id=26010921&amp;from=informer" target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/26010921/3_0_FFD54EFF_FFB52EFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a><!-- /Yandex.Metrika informer -->
-		<!--LiveInternet counter--><script type="text/javascript">document.write("<a href='//www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t12.6;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";h"+escape(document.title.substring(0,80)) +  ";" + Math.random() + "' border=0 width=88 height=31 alt='' title='LiveInternet: показано число просмотров за 24 часа, посетителей за 24 часа и за сегодня'><\/a>")</script><!--/LiveInternet-->
+		<!-- Yandex.Metrika informer -->
+		<a href="https://metrika.yandex.ru/stat/?id=26010921&amp;from=informer" target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/26010921/3_0_FFD54EFF_FFB52EFF_0_pageviews" style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+		<!-- /Yandex.Metrika informer -->
+		<!--LiveInternet counter-->
+		<script type="text/javascript">document.write("<a href='//www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t12.6;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";h"+escape(document.title.substring(0,80)) +  ";" + Math.random() + "' border=0 width=88 height=31 alt='' title='LiveInternet: показано число просмотров за 24 часа, посетителей за 24 часа и за сегодня'><\/a>")</script>
+		<!--/LiveInternet-->
+		<!-- begin of Top100 code -->
+		<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?3048802"></script>
+		<noscript>
+		<a href="http://top100.rambler.ru/navi/3048802/">
+		<img src="http://counter.rambler.ru/top100.cnt?3048802" alt="Rambler's Top100" border="0" />
+		</a>
+
+		</noscript>
+		<!-- end of Top100 code -->
 	</span>
 
 
