--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -41,8 +41,13 @@ news.s22 {
 	line-height: 40px;
 	text-align: center;
 }
+.promises p {
+	font-size: 18px;
+	color: #376B50;
+	font-family: 'RobCondBold';
+}
 .button-bottom-panel {
-	padding: 20px 10px;
+	padding: 20px 0px;
 }
 .button-top-panel {
 	padding: 20px 10px;
@@ -74,6 +79,7 @@ p.labels {
 .input input, .input button, .input select, .input textarea {
 	width: 100%;
 	height: 30px;
+	line-height: 0px;
 	font-size: 15px;
 }
 .input textarea {
