Добавлен контактный адерс

--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -14,6 +14,11 @@
 		<p class="usr">Самсонов Дмитрий</p>
 		<p class="spec">Главный редактор</p>
 	</div>
+
+	<p>АДРЕС</p>
+	<div>
+		<p class="spec">123060, ул. Маршала Соколовского, д.6</p>
+	</div>
 	
 </div>
 
