исправлен баг в айподах с версткой и добавлена анимация выбора новости

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -42,6 +42,9 @@ news.s22 {
 	text-decoration: none;
 	background-color: rgba(47, 90, 153, .2);
 	overflow: hidden;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+	transition: 0.2s;
 }
 .inner-container .hover-stater {
 	position: absolute;
@@ -63,6 +66,10 @@ news.s22 {
 .inner-container:hover {
 	text-decoration: none;
 	color: black;
+	-webkit-transform: scale(1.01);
+	-moz-transform: scale(1.01);
+	transform: scale(1.01);
+	box-shadow: 0px 1px 3px rgba(0,0,0,.5);
 }
 .inner-container .views {
 	position: absolute;
