--- a/views/content.ejs
+++ b/views/content.ejs
@@ -88,7 +88,7 @@
 				<span>
 					<a href="https://twitter.com/tvoyredaktor" class="twitter-follow-button" data-show-count="false" data-lang="en">Подписаться на Твой Космос</a>
 
-					<div class="fb-like" data-href="https://www.facebook.com/tvoykosmos" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+					<div style="width: auto !important" class="fb-like" data-href="https://www.facebook.com/tvoykosmos" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
 
 					<div id="vk_subscribe"></div>
 				</span>
