--- a/views/content.ejs
+++ b/views/content.ejs
@@ -9,7 +9,7 @@
 <% block('meta', partial('meta')) -%>
 <% block('title', post.title) -%>
 
-<% stylesheet("/stylesheets/content.css") -%>
+<% stylesheet("/build/css/content.css") -%>
 
 <div id="fb-root"></div>
 
