--- a/views/base.ejs
+++ b/views/base.ejs
@@ -26,13 +26,13 @@
 		html, body {
 			height: 100%;
 			width: 100%;
-			background: #e2e2e2;
+			background-color: #fff;
 		}
 		.container {
 			width: 1200px !important;
 			padding: 0px;
-			background: #f5f5f5;
-			box-shadow: 0px 2px 2px rgba(0,0,0,.5);
+			background: #f7f7f7;
+			box-shadow: 0px 1px 1px rgba(0,0,0,.3);
 			position: relative;
 			z-index: 1;
 			border-top: 4px solid #FFB52E;
