--- a/views/content.ejs
+++ b/views/content.ejs
@@ -64,7 +64,7 @@
 					<p>Поделись с друзьями:</p>
 				    <p class="share-bottom-buttons">
 						<% if (user && user.name == 'Gendalf') { %>
-					    	<a href="/admin"><span class="update_button fa fa-key"></span></a>
+					    	<a href="/admin/?post_id={{ post._id }}"><span class="update_button fa fa-key"></span></a>
 					    <% } %>
 					    <span class="social_share fa fa-vk" data-type="vk"></span>
 					    <span class="social_share fa fa-facebook" data-type="fb"></span>
