--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -154,7 +154,7 @@
 						</div>
 						<div class="row2">
 							<span class="update" ng-click="loadToFormForUpdate(element)">Редактировать</span>
-							<span class="delete" ng-click="deleteNews(element._id, true)">Удалить</span>
+							<!-- <span class="delete" ng-click="deleteNews(element._id, true)">Удалить</span> -->
 						</div>
 
 					</div>
