--- a/public/stylesheets/archive.css
+++ b/public/stylesheets/archive.css
@@ -66,6 +66,7 @@
 .feed .info span {
 	display: inline-block;
 	vertical-align: middle;
+	width: 100%;
 }
 .feed .info span > * {
 	margin-bottom: 5px;
@@ -74,6 +75,9 @@
 	font-family: 'RobCondBold';
 	font-size: 22px;
 	line-height: 24px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 
 }
 .feed .info span .description {
