убрагн рамблер счетчик временно

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -32,12 +32,12 @@
 				<!--/LiveInternet-->
 
 				<!-- begin of Top100 code -->
-				<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?3048802"></script>
-				<noscript>
-					<a href="http://top100.rambler.ru/navi/3048802/">
-						<img src="http://counter.rambler.ru/top100.cnt?3048802" alt="Rambler's Top100" border="0" />
-					</a>
-				</noscript>
+				<!-- // <script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?3048802"></script> -->
+				<!-- <noscript> -->
+					<!-- <a href="http://top100.rambler.ru/navi/3048802/"> -->
+						<!-- <img src="http://counter.rambler.ru/top100.cnt?3048802" alt="Rambler's Top100" border="0" /> -->
+					<!-- </a> -->
+				<!-- </noscript> -->
 				<!-- end of Top100 code -->
 			</p>
 
