--- a/views/footer-mobile.ejs
+++ b/views/footer-mobile.ejs
@@ -34,13 +34,13 @@
 		<script type="text/javascript">document.write("<a href='//www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t12.6;r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"":";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u" + escape(document.URL) +";h"+escape(document.title.substring(0,80)) +  ";" + Math.random() + "' border=0 width=88 height=31 alt='' title='LiveInternet: показано число просмотров за 24 часа, посетителей за 24 часа и за сегодня'><\/a>")</script>
 		<!--/LiveInternet-->
 		<!-- begin of Top100 code -->
-		<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?3048802"></script>
-		<noscript>
-		<a href="http://top100.rambler.ru/navi/3048802/">
-		<img src="http://counter.rambler.ru/top100.cnt?3048802" alt="Rambler's Top100" border="0" />
-		</a>
+		<!-- // <script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?3048802"></script> -->
+		<!-- <noscript> -->
+		<!-- <a href="http://top100.rambler.ru/navi/3048802/"> -->
+		<!-- <img src="http://counter.rambler.ru/top100.cnt?3048802" alt="Rambler's Top100" border="0" /> -->
+		<!-- </a> -->
 
-		</noscript>
+		<!-- </noscript> -->
 		<!-- end of Top100 code -->
 	</span>
 
