убрана кнопка удаления новости

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -181,7 +181,7 @@
 					<p>{{ news_sections[news.section] }}</p>
 
 				<span class="button-block">
-					<button ng-click="deleteNews(news._id)">Удалить</button>
+					<!-- <button ng-click="deleteNews(news._id)">Удалить</button> -->
 					<button ng-click="loadToFormForUpdate(news)">Редактировать</button>
 					<button><a href="/post/{{ news._id }}">Перейти в новость</a></button>
 				</span>
