--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -197,3 +197,36 @@ button.highlighted {
 form.auth {
 	text-align: center;
 }
+
+.warning {
+	position: fixed;
+	top: 20px;
+	padding: 0 20px;
+	right: 20px;
+	width: 300px;
+	height: 200px;
+	background-color: #E85F48;
+	line-height: 200px;
+	font-size: 22px;
+	z-index: 9999;
+}
+.warning .close {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 40px;
+	height: 40px;
+	background-color: white;
+	color: black;
+	line-height: 40px;
+	text-align: center;
+}
+.warning .warning-message {
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 30px;
+}
+.warning p {
+	text-align: center;
+	font-family: 'RobCondBold';
+}
