--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 
 <div ng-app="tvoyKosmos" ng-controller="Index" ng-init="init()">	
 	<div class="feed">
+		<!-- <div class="block">hello</div> -->
 		<div ng-repeat="block in feed_blocks"
 			 class="block">
 			<news class="anim" 
