--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,27 +42,18 @@
 							</span>
 						</div>
 					</div>
-					<div class="each-event">
-						<div class="event-image" style="background-image: url(https://s3-eu-west-1.amazonaws.com/tvoykosmos/imgs/02_09_14_laser1.jpg)"></div>
-						<div class="event-info">
-							<span>
-								<p>Это самое пиздатое в мире описание</p>
-								<p><span class="fa fa-eye"></span>246</p>
-							</span>
-						</div>
-					</div>
-					<div class="each-event">
-						<div class="event-image" style="background-image: url(https://s3-eu-west-1.amazonaws.com/tvoykosmos/imgs/02_09_14_laser1.jpg)"></div>
-						<div class="event-info">
-							<span>
-								<p>Это самое пиздатое в мире описание</p>
-								<p><span class="fa fa-eye"></span>246</p>
-							</span>
-						</div>
-					</div>
 				</div>
 			</div>
-			<div class="article"></div>
+			<div class="article">
+				<div class="article-image">
+					<span class="article-info">
+						<p>Обзор</p>
+						<p>Топ 10 кинорежиссеров снявших фильмы о космосе</p>
+						<p> Добавлено тогда то. Просмотров</p>
+					</span>
+				</div>
+				
+			</div>
 		</div>
 		<div ng-repeat="block in feed_blocks"
 			 class="block">
