--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -372,6 +372,23 @@ news.s22 .inner-container .text-container .description {
 	text-shadow: 0px 1px 2px rgba(0,0,0,.5);
 }
 
+/*// arcticle*/
+
+.article {
+	padding: 15px;
+}
+.arcticle-image {
+	background-position: center center;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	line-height: 300px;
+}
+.article-info {
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 30px;
+}
 
 
 
