--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 			<div class="article">
-				<div class="article-image">
+				<div class="article-image" style="background-image: url(https://s3-eu-west-1.amazonaws.com/tvoykosmos/imgs/02_09_14_laser1.jpg)">
 					<span class="article-info">
 						<p>Обзор</p>
 						<p>Топ 10 кинорежиссеров снявших фильмы о космосе</p>
